[tool.poetry]
name = "hdr-merge"
version = "0.1.0"
description = ""
authors = ["Greg Zaal <gregzzmail@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"  # cx_Freeze doesn't have binary wheels for Python 3.7
exifread = "^2.1"

[tool.poetry.dev-dependencies]
cx_Freeze = "^5.1"
mypy = "^0.701.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
